k8s/api_manifest/fast_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi
        image: heogyeom/passengers_predict_service-fastapi:0.6
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
