k8s/api_manifest/streamlit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: heogyeom/passengers_predict_service-streamlit:0.3
        imagePullPolicy: Always
        ports:
         - containerPort: 8501
