k8s/api_manifest/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-webservice
spec:
  selector:
    app: fastapi
  ports:
    - name: fastapi 
      port: 80
      protocol: TCP
      targetPort: 8000
